# timeslotsAPI/app/demo/v1/schemas.py
@@ -61,7 +61,7 @@ filters = {
     ('timeslots_dentistID', 'POST'): {200: {'headers': None, 'schema': None}, 409: {'headers': None, 'schema': None}, 400: {'headers': None, 'schema': None}},
     ('timeslots_dentistID', 'GET'): {200: {'headers': None, 'schema': None}, 400: {'headers': None, 'schema': None}, 404: {'headers': None, 'schema': None}},
     ('timeslots', 'POST'): {200: {'headers': None, 'schema': None}, 409: {'headers': None, 'schema': None}, 400: {'headers': None, 'schema': None}},
-    ('timeslots', 'GET'): {200: {'headers': None, 'schema': None}},
+    ('timeslots', 'GET'): {200: {'headers': None, 'schema': None}, 404: {'headers': None, 'schema': None}},
     ('timeslots_dentistID_timeslotID', 'GET'): {200: {'headers': None, 'schema': None}, 400: {'headers': None, 'schema': None}, 404: {'headers': None, 'schema': None}},
     ('timeslots_dentistID_timeslotID_cancel', 'PUT'): {200: {'headers': None, 'schema': None}, 400: {'headers': None, 'schema': None}, 404: {'headers': None, 'schema': None}},
     ('timeslots_dentistID_timeslotID_reserve', 'PUT'): {200: {'headers': None, 'schema': None}, 400: {'headers': None, 'schema': None}, 404: {'headers': None, 'schema': None}},
